CREATE Geometry API
