# src/api/geometry_api.py
@@ -8,10 +8,38 @@ from src.persistance.geometry import Geometry
 from src.service import (
     geometry_service,
     file_storage_service,
+    api_authentication_service
 )
 from src.service.file_storage_service import FileType
 
 GEOMETRY_API_BLUEPRINT = Blueprint("geometry", __name__, url_prefix="/geometry")
+
+@GEOMETRY_API_BLUEPRINT.post("/")
+def create_geometry():
+    try:
+        body = request.get_json()
+
+        geometry_file = body.get("geometry_file", {})
+        file_name = geometry_file.get("filename")
+        file_data = geometry_file.get("data")
+        description = body.get("description")
+
+        if not file_name or not file_data or not description:
+            raise ValueError("Incomplete geometry data provided")
+
+        geometry = geometry_service.create(
+            file_name,
+            io.BytesIO(file_data.encode('utf-8')),
+            description,
+            api_authentication_service.get_current_user()
+        )
+        
+        return {"new_geometry": geometry.name}
+    
+    except Exception as e:
+        response = jsonify({"error": str(e)})
+        response.status_code = 400
+        return response
 
 @GEOMETRY_API_BLUEPRINT.get("/<geometry_id>")
 def get_geometry(geometry_id):
